# sdp4text

./: README.md  sdp4text.cabal
src/SDP/: Text.hs
src/SDP/Text/: Builder.hs  Lazy.hs
test/: test-text-lazy.hs  test-text-strict.hs
