name:          sdp4text
version:       0.2
category:      Data Structures

synopsis:      See README.md
description:   See README.md

author:        Andrey Mulik
maintainer:    work.a.mulik@gmail.com
bug-reports:   https://github.com/andreymulik/sdp4text/issues

copyright:     2020 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: https://github.com/andreymulik/sdp4text

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---

Library
  hs-source-dirs:   src
  
  default-language: Haskell2010
  
  build-depends:
    base         >= 4.12 && <   5,
    text         >= 1.2  && < 1.3,
    sdp          >= 0.2  && < 0.3,
    sdp-io       >= 0.2  && < 0.3
  
  ghc-options: -O2 -Wall -Wno-orphans
  
  exposed-modules:
    SDP.Text.Lazy
    SDP.Text

---            _____  _____  _____  _____  _____  _   _  _____               ---
---           |_   _||  ___|/  ___||_   _||_   _|| \ | ||  __ \              ---
---             | |  | |__  \ `--.   | |    | |  |  \| || |  \/              ---
---             | |  |  __|  `--. \  | |    | |  | . ` || | __               ---
---             | |  | |___ /\__/ /  | |   _| |_ | |\  || |_\ \              ---
---             \_/  \____/ \____/   \_/   \___/ \_| \_/ \____/              ---

test-suite test-bytestring-strict
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-text-strict.hs
  
  other-modules:
    SDP.Text

  build-depends:
    base                       >= 4.12 && < 5,
    sdp                        >= 0.2  && < 0.3,
    text                       >= 1.2  && < 1.3,
    sdp-io                     >= 0.2  && < 0.3,
    
    QuickCheck                 >= 2.12 && < 3,
    sdp-quickcheck             >= 0.2  && < 0.3,
    quickcheck-instances       >= 0.3  && < 0.4,
    
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4

  ghc-options: -Wall -O2 -Wno-orphans

test-suite test-bytestring-lazy
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-text-lazy.hs
  
  other-modules:
    SDP.Text
    SDP.Text.Lazy

  build-depends:
    base                       >= 4.12 && < 5,
    sdp                        >= 0.2  && < 0.3,
    text                       >= 1.2  && < 1.3,
    sdp-io                     >= 0.2  && < 0.3,
    
    QuickCheck                 >= 2.12 && < 3,
    sdp-quickcheck             >= 0.2  && < 0.3,
    quickcheck-instances       >= 0.3  && < 0.4,
    
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4

  ghc-options: -Wall -O2 -Wno-orphans


