name:          sdp4text
version:       0.2
category:      Data Structures

synopsis:      SDP wrapper for Text.
description:   This package implements SDP classes for Text.

author:        Andrey Mulik
maintainer:    work.a.mulik@gmail.com
bug-reports:   https://github.com/andreymulik/sdp4text/issues

copyright:     2020 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

tested-with:
  -- lts-7.24
  GHC == 8.0.1,
  -- lts-9.21
  GHC == 8.0.2,
  -- lts-11.22
  GHC == 8.2.2,
  -- lts-12.26
  GHC == 8.4.4,
  -- lts-18.8
  GHC == 8.10.6

source-repository head
  type: git
  location: https://github.com/andreymulik/sdp4text

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -Wno-orphans -Wcompat
  
  build-depends:
    sdp    >= 0.2 && <   1,
    text   >= 1.2 && < 1.3,
    base   >= 4.9 && <   5,
    sdp-io >= 0.2 && < 0.3
  
  exposed-modules:
    SDP.Text.Builder
    SDP.Text.Lazy
    SDP.Text

---            _____  _____  _____  _____  _____  _   _  _____               ---
---           |_   _||  ___|/  ___||_   _||_   _|| \ | ||  __ \              ---
---             | |  | |__  \ `--.   | |    | |  |  \| || |  \/              ---
---             | |  |  __|  `--. \  | |    | |  | . ` || | __               ---
---             | |  | |___ /\__/ /  | |   _| |_ | |\  || |_\ \              ---
---             \_/  \____/ \____/   \_/   \___/ \_| \_/ \____/              ---

test-suite test-bytestring-strict
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-text-strict.hs
  ghc-options:      -Wall -Wno-orphans
  other-modules:
    SDP.Text

  build-depends:
    base                       >= 4.9  && <   5,
    sdp                        >= 0.2  && <   1,
    text                       >= 1.2  && < 1.3,
    sdp-io                     >= 0.2  && < 0.3,
    
    QuickCheck                 >= 2.8  && <   3,
    sdp-quickcheck             >= 0.2  && <   1,
    quickcheck-instances       >= 0.3  && < 0.4,
    
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4

test-suite test-bytestring-lazy
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-text-lazy.hs
  ghc-options:      -Wall -Wno-orphans
  other-modules:
    SDP.Text.Lazy
    SDP.Text

  build-depends:
    base                       >= 4.9  && <   5,
    sdp                        >= 0.2  && <   1,
    text                       >= 1.2  && < 1.3,
    sdp-io                     >= 0.2  && < 0.3,
    
    QuickCheck                 >= 2.8  && <   3,
    sdp-quickcheck             >= 0.2  && <   1,
    quickcheck-instances       >= 0.3  && < 0.4,
    
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4





